# STierUtilities

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.cursor/: mcp.json
.github/workflows/: release.yml
docs/: BRAND.md  bacnet-device-inbox-two-phase.md  code-review-todo.md  platform-observability-and-ecosystem.md  rendering-standards.md
docs-site/: README.md  docs.json  index.mdx
docs-site/concepts/: authoring.mdx
docs-site/reference/: bacnet-historian.mdx  bacnet-read.mdx  media-convert.mdx  netscan.mdx  network-adapters.mdx  overview.mdx  scheduler.mdx  timeseries.mdx
docs/adr/: 0001-edge-control-runtime-gate.md
docs/schemas/: tool-manifest.schema.json
mocks/: bacnet-manager-redesign.html
scripts/: dev-fake-bacnet-device.ps1  fetch-ffmpeg.ps1  fetch-ffmpeg.sh  gen-utilities-docs.mjs  generate-docs.mjs  observability-smoke.ps1  test-tauri-mcp-bridge.mjs
src/: index.html  integration.test.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  default.json  media.json  observability.json
src-tauri/icons/: icon.icns
src-tauri/resources/clipboardtyper/: clipboard_typer.py  requirements.txt
src-tauri/src/: auth.rs  bacnet.rs  bacnet_codec.rs  bacnet_mstp.rs  clipboardtyper.rs  heicmov.rs  inventory_db.rs  inventory_sync.rs  lib.rs  main.rs  mcp.rs  modbus.rs  netscan.rs  networkmanager.rs  observability.rs  secrets.rs  startup.rs  timeseries.rs
src/platform/: app-tools.js  bootstrap.js  content-host.js  host.js  host.test.js  manifest.js  manifest.test.js  mcp-loader.js  mcp-loader.test.js  registry.js  registry.test.js  render-bridge.js  render-bridge.test.js  router.js  router.test.js  scope-registry.js  (+9 more)
(+120 files in other folders)
