[package]
name = "s_tier_utilities"
version = "0.5.4"
description = "S-Tier Utilities — a hub for small Windows utilities."
authors = ["stier1ba"]
edition = "2021"

[lib]
name = "s_tier_utilities_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
arboard = "3"

[target.'cfg(windows)'.dependencies]
rfd = "0.15"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
] }
